fix z-index and mobile menu sliding effect

--- a/src/containers/Header/components/MobileMenu/styles.module.scss
+++ b/src/containers/Header/components/MobileMenu/styles.module.scss
@@ -7,6 +7,7 @@
   @include flexbox(flex-start, center);
   flex-direction: column;
   width: 100%;
+  z-index: 9;
 }
 
 .connectWrapper {
