--- a/src/containers/Header/styles.module.scss
+++ b/src/containers/Header/styles.module.scss
@@ -9,12 +9,20 @@
   height: 100px;
   width: 100%;
   position: absolute;
+  
 }
 
 .mobileMenu {
   position: absolute;
   top: 0;
   left: 0;
+  transform: translateX(-100%);
+  transition: 300ms;
+
+  
+}
+.mobileMenuOpen {
+  transform: translateX(0);
 }
 
 .burger {
